version/0.17/_sources/api/solver/_autosummary/settings/iso_surface.rst.txt
:orphan:

.. _iso_surface:

iso_surface
===========

.. autoclass:: ansys.fluent.core.solver.settings_232.iso_surface.iso_surface
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`iso_surface_child <iso_surface_child>`


.. rubric:: Included in:

============================   =====================

Parent                                       Summary

============================   =====================
:ref:`surfaces <surfaces_3>`       'surfaces' child.

============================   =====================

