version/0.19/_sources/api/solver/_autosummary/settings/iso_surface.rst.txt
:orphan:

.. _iso_surface:

iso_surface
===========

.. autoclass:: ansys.fluent.core.solver.settings_241.iso_surface.iso_surface
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`iso_surface_child <iso_surface_child>`


.. rubric:: Included in:

============================   =====================

Parent                                       Summary

============================   =====================
:ref:`surfaces <surfaces_5>`       'surfaces' child.

============================   =====================

